--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,11 @@
 {
   "plugins": ["prettier-plugin-tailwindcss"],
   "arrowParens": "always",
-  "semi": false,
-  "trailingComma": "none",
+  "printWidth": 80,
   "tabWidth": 2,
-  "endOfLine": "auto",
   "useTabs": false,
+  "semi": true,
   "singleQuote": true,
-  "printWidth": 120,
+  "trailingComma": "all",
   "jsxSingleQuote": true
 }
