--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
   "dependencies": {
     "@mantine/core": "^7.5.1",
     "@mantine/hooks": "^7.5.1",
-    "autoprefixer": "^10.4.17",
-    "clsx": "^2.1.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
     "formik": "^2.4.5",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.1",
     "react-router-dom": "^6.22.0",
+    "reduxjs-toolkit-persist": "^7.2.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
