feat: integrate Overview page (#38)
1JEyzseO

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,9 @@
       "@/redux": ["providers/redux"],
       "@/redux/*": ["providers/redux/*"],
       "@/apis": ["apis"],
-      "@/apis/*": ["apis/*"]
+      "@/apis/*": ["apis/*"],
+      "@/contexts": ["contexts"],
+      "@/contexts/*": ["contexts/*"]
     }
   },
   "include": ["src"],
