--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
-    "lodash.startcase": "^4.4.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
+    "lodash.debounce": "^4.0.8",
+    "lodash.startcase": "^4.4.0",
     "mantine-datatable": "^7.5.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
@@ -46,6 +47,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/lodash.startcase": "^4.4.9",
     "@types/node": "^20.11.10",
     "@types/react": "^18.2.43",
