feat: create chart statistic
npGrUxCW

--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "lodash.isequal": "^4.5.0",
     "lodash.orderby": "^4.6.0",
     "lodash.startcase": "^4.4.0",
+    "lodash.groupby": "^4.6.0",
     "lodash.tostring": "^4.1.4",
     "mantine-datatable": "^7.5.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
     "react-icons": "^5.0.1",
@@ -54,6 +56,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/lodash.debounce": "^4.0.9",
     "@types/lodash.isequal": "^4.5.8",
+    "@types/lodash.groupby": "^4.6.9",
     "@types/lodash.orderby": "^4.6.9",
     "@types/lodash.startcase": "^4.4.9",
     "@types/lodash.tostring": "^4.1.9",
