--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "lodash.debounce": "^4.0.8",
+    "lodash.groupby": "^4.6.0",
     "lodash.isequal": "^4.5.0",
     "lodash.orderby": "^4.6.0",
     "lodash.startcase": "^4.4.0",
-    "lodash.groupby": "^4.6.0",
     "lodash.tostring": "^4.1.4",
     "mantine-datatable": "^7.5.1",
     "postcss": "^8.4.33",
@@ -47,6 +47,8 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
+    "react-to-pdf": "^1.0.1",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.1",
     "uuid": "^9.0.1",
@@ -55,8 +57,8 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/lodash.isequal": "^4.5.8",
     "@types/lodash.groupby": "^4.6.9",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/lodash.orderby": "^4.6.9",
     "@types/lodash.startcase": "^4.4.9",
     "@types/lodash.tostring": "^4.1.9",
