--- a/package.json
+++ b/package.json
@@ -29,11 +29,15 @@
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "country-flag-icons": "^1.5.11",
     "dayjs": "^1.11.10",
     "file-saver": "^2.0.5",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "html2canvas": "^1.4.1",
+    "i18next": "^23.11.4",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "lodash.debounce": "^4.0.8",
     "lodash.groupby": "^4.6.0",
     "lodash.isequal": "^4.5.0",
@@ -46,6 +50,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
+    "react-i18next": "^14.1.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
