feat: show template, get template details and import template
feat:T54WXKvW

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mantine/dates": "^7.6.1",
     "@mantine/hooks": "^7.5.1",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
